# DGTRT

./: .gitignore  CMakeLists.txt  TRT.hpp
cmake/: config.hpp.in
docs/: Doxyfile
docs/html/: _array_8hpp_source.html  _error_8hpp_source.html  _lua_8hpp_source.html  _matrix_8hpp_source.html  _wall_timer_8hpp_source.html  annotated.html  classes.html  classfem_1_1_lua_reader-members.html  classfem_1_1_lua_reader.html  classfem_1_1_wall_timer-members.html  classfem_1_1_wall_timer.html  classtrt_1_1_array-members.html  classtrt_1_1_array.html  classtrt_1_1_matrix-members.html  classtrt_1_1_matrix.html  dir_bba024cd03edd7f9d6096b84e1006209.html  dir_c1845e5bf011c2136883d0d7188f50e9.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  menudata.js
docs/html/search/: all_1.js  all_11.js  all_12.js  all_2.js  all_4.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_11.js  functions_12.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  functions_e.js  functions_f.js  searchdata.js  variables_0.js
exec/: CMakeLists.txt  class_problem.lua  error.cpp  marshak.cpp  marshak.lua  ooa.cpp  sweep.cpp  transport.cpp  transport.lua
fem/: Basis.cpp  Basis.hpp  BilinearIntegrator.cpp  BilinearIntegrator.hpp  CMakeLists.txt  Coefficient.cpp  Coefficient.hpp  ElTrans.cpp  ElTrans.hpp  Element.cpp  Element.hpp  FESpace.cpp  FESpace.hpp  GridFunction.cpp  GridFunction.hpp  L2Segment.cpp  L2Segment.hpp  L2Space.hpp  LinearIntegrator.cpp  LinearIntegrator.hpp  Node.cpp  Node.hpp
general/: Array.hpp  CMakeLists.txt  Error.cpp  Error.hpp  Quadrature.cpp  Quadrature.hpp  format.py  rules.txt  weight.txt
linalg/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp
test/: CMakeLists.txt  array.cpp  coefficient.cpp  integrators.cpp  mass.py  matrix.cpp  opacity.cpp  poly1d.cpp  quadrature.cpp  si.cpp  sweep.cpp  transport.cpp
trt/: CMakeLists.txt  Opacity.cpp  Opacity.hpp  Sweeper.cpp  Sweeper.hpp  TVector.cpp  TVector.hpp  TransportOperator.cpp  TransportOperator.hpp
utils/: CH_Timer.cpp  CH_Timer.hpp  CMakeLists.txt  Lua.cpp  Lua.hpp  Timer.cpp  Timer.hpp  WallTimer.cpp  WallTimer.hpp  Writer.cpp  Writer.hpp
